<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.push.k.mybroadcast.RepairRequestDetails"
    tools:showIn="@layout/activity_repair_request_details">

    <TableLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="1"
        android:layout_marginBottom="54dp"
        >

        <TableRow android:visibility="gone">
            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailNOLabel"
                android:padding="3dip"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/rrNO"
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"/>
        </TableRow>

        <TableRow >
            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailDeviceLabel"
                android:padding="3dip"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/rrDevName"
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"/>

        </TableRow>

        <TableRow>

            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailRequesterLabel"
                android:padding="3dip"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/rrRequester"
                android:text=""
                android:gravity="left"
                android:padding="3dip"
                android:maxLines="100"
                android:textColor="#000"
                android:scrollHorizontally="false"/>

        </TableRow>

        <TableRow >
            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailPhoneLabel"
                android:padding="3dip"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/rrPhone"
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"/>
        </TableRow>

        <TableRow >

        </TableRow>
        <TableRow >
            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailStartTimeLabel"
                android:padding="3dip"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/rrStartTime"
                android:text=""
                android:gravity="left"
                android:padding="3dip"
                android:maxLines="100"
                android:textColor="#000"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow >
            <TextView
                android:gravity="left"
                android:text="@string/RepairDetailEndTimeLabel"
                android:padding="3dip"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/rrEndTime"
                android:text=""
                android:gravity="left"
                android:padding="3dip"
                android:maxLines="100"
                android:textColor="#000"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/empty1"
                android:text=""
                android:gravity="left"
                android:padding="3dip"
                android:maxLines="100"
                android:textColor="#000"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow >

            <TextView
                android:id="@+id/empty2"
                android:text=""
                android:gravity="left"
                android:padding="3dip"
                android:maxLines="100"
                android:textColor="#000"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RepairDetailDeleteButton"
                android:id="@+id/rrDelButton"
                android:onClick="rrDeleteButtonClick"
                android:layout_column="0"
                android:soundEffectsEnabled="true" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
