<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_message_details" tools:context="com.push.k.mybroadcast.MessageDetails"
    >
<TableLayout  android:layout_width="fill_parent"
android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:stretchColumns="1"
android:layout_marginBottom="60dp"
>

<TableRow>
    <TextView
        android:gravity="right"
        android:text="@string/MessageDetails_DeviceLabel"
        android:padding="3dip"
       />
    <TextView
        android:id="@+id/DeviceId"
        android:text=""
        android:gravity="left"
        android:padding="3dip"
        android:maxLines="100"
        android:scrollHorizontally="false"
        />
</TableRow>

<TableRow>
    <TextView
        android:gravity="right"
        android:text="@string/MessageDetails_TitleLabel"
        android:padding="3dip"
        />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/Title"
        android:text=""
        android:gravity="left"
        android:padding="3dip"
        android:scrollHorizontally="false"
        android:layout_weight="2"
        />
</TableRow>

<TableRow>
    <TextView
        android:gravity="right"
        android:text="@string/MessageDetails_MessageLabel"
        android:padding="3dip"
        />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/Body"
        android:text=""
        android:gravity="left"
        android:padding="3dip"
        android:maxLines="10"
        android:scrollHorizontally="false"
        android:layout_weight="2"
        />
</TableRow>

<TableRow>
    <TextView
        android:gravity="right"
        android:text="@string/MessageDetails_DatetimeLabel"
        android:padding="3dip"
        />
    <TextView
        android:id="@+id/DateTime"
        android:text=""
        android:gravity="left"
        android:padding="3dip"
        android:ellipsize="none"
        android:maxLines="100"
        android:scrollHorizontally="false"
        />
</TableRow>
    <WebView
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webView"
        />

    <TableRow>
        <TextView
            android:gravity="right"
            android:text=""
            android:padding="3dip"
            />
    </TableRow>
</TableLayout>

    </ScrollView>
