<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.push.k.mybroadcast.CreateRepairRequest"
    tools:showIn="@layout/activity_create_repair_request">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TableRow>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairDeviceLabel"
                android:padding="3dip"
                android:textColor="#000"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrDevList" />
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:height="3dp"
                android:textColor="#000"
                android:background="#00f"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairStartTimeLabel"
                android:padding="3dip"
                android:textColor="#000"/>




        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairYearLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairMonthLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairDayLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrStartYear"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrStartMonth"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrStartDay"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairHourLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairMinuteLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrStartHour"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrStartMin"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:height="3dp"
                android:textColor="#000"
                android:background="#00f"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairEndTimeLabel"
                android:padding="3dip"
                android:textColor="#000"/>

        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairYearLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairMonthLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairDayLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrEndYear"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrEndMonth"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrEndDay"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairHourLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text="@string/CreateRepairMinuteLabel"
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrEndHour"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rrEndMin"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateRepairCreateButton"
                android:id="@+id/crCreateRequest"
                android:onClick="createCreateRequestClick"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
            <TextView
                android:gravity="left"
                android:text=""
                android:padding="3dip"
                android:textColor="#000"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>
